added mysql backend

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,5 +1,7 @@
 version = 0.1
 service_name = netire-cryptall
+# available backends: ldap, mysql
+backend = mysql
 
 [ldap]
 host = ldap.exmaple.com
@@ -9,3 +11,12 @@ bind_pw =
 search_base = ou=people,dc=user,dc=mc8051,dc=de
 query_filter = (&(mail=%s)(pgpEnabled=True)(objectClass=person))
 key_attribute = pgpKey
+
+[mysql]
+host = sql.exmaple.com
+port = 3306
+username =
+password =
+database = vmail
+# use %u as a placeholder for the username and %d as the domain (username@domain.com)
+query = SELECT pgp_key FROM pgp LEFT JOIN account USING(account_id) LEFT JOIN domain ON account.domain_id = domain.domain_id WHERE username = '%u' AND domain = '%d' and enabled = true
